--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&family=Roboto:wght@400;500&display=swap');
+
 body {
+    margin: 0;
+    background-color: #f7f7f7;
+}
+
+h1, h2, h3, h4, h5 {
     margin: 0;
 }
