--- a/src/components/avatar/index.module.pcss
+++ b/src/components/avatar/index.module.pcss
@@ -5,7 +5,7 @@
     height: 48px;
     min-width: 48px;
     min-height: 48px;
-    background-color: #c4c4c4;
+    background-color: var(--color-bg-secondary);
     overflow: hidden;
 
     &_small {
