--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -1,10 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;800&family=Roboto:wght@400;500&display=swap");
+
+:root {
+    --color-bg-primary: #f7f7f7;
+    --color-bg-secondary: #c4c4c4;
+    --color-bg-button: #f2f2f2;
+    --color-white: #fff;
+    --color-black: #000;
+    --color-shadow: rgba(0, 0, 0, 0.15);
+    --color-border: #dfdfdf;
+}
 
 body {
     margin: 0;
-    background-color: #f7f7f7;
+    background-color: var(--color-bg-primary);
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
     margin: 0;
 }
