--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -6,8 +6,10 @@
     --color-bg-button: #f2f2f2;
     --color-white: #fff;
     --color-black: #000;
+    --color-sidebar-header: #121212;
     --color-shadow: rgba(0, 0, 0, 0.15);
     --color-border: #dfdfdf;
+    --color-border-input: #d9d9d9;
 }
 
 body {
