--- a/src/routes/specialists/index.module.pcss
+++ b/src/routes/specialists/index.module.pcss
@@ -6,7 +6,7 @@
     width: 100%;
     max-width: 992px;
 
-    &__sidebar,
+    &__search,
     &__main {
         background-color: var(--color-white);
         box-shadow: 0 1px 1px var(--color-shadow);
@@ -43,6 +43,19 @@
         right: 32px;
     }
 
+    &__users-empty,
+    &__user {
+        font-family: Roboto, sans-serif;
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-black);
+    }
+
+    &__users-empty {
+        text-align: center;
+        display: block;
+    }
+
     &__user {
         display: grid;
         grid-template-areas: "a b" "a c";
@@ -51,10 +64,6 @@
         grid-column-gap: 16px;
         padding: 16px 0;
         position: relative;
-        font-family: Roboto, sans-serif;
-        font-size: 14px;
-        line-height: 16px;
-        color: var(--color-black);
 
         &::after {
             content: "";
@@ -97,5 +106,18 @@
                 font-weight: 400;
             }
         }
+    }
+
+    &__search {
+        display: grid;
+        grid-auto-flow: row;
+        grid-row-gap: 16px;
+    }
+
+    &__search-header {
+        font-family: Montserrat, sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        color: var(--color-sidebar-header);
     }
 }
