issue 3 form and validation

--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -6,8 +6,21 @@
     --color-bg-button: #f2f2f2;
     --color-white: #fff;
     --color-black: #000;
+    --color-sidebar-header: #121212;
     --color-shadow: rgba(0, 0, 0, 0.15);
     --color-border: #dfdfdf;
+    --color-border-input: #d9d9d9;
+    --color-button-primary: #7a7a7a;
+    --color-button-primary-text: #fff;
+    --color-button-primary-hover: rgba(122, 122, 122, 0.7);
+    --color-button-secondary: #fff;
+    --color-button-secondary-text: #7a7a7a;
+    --color-button-secondary-border: rgba(122, 122, 122, 0.3);
+    --color-button-secondary-hover: rgba(122, 122, 122, 0.1);
+    --color-red-error: #ff6d6d;
+    --color-date-placeholder: #a9a9a9;
+    --color-date-icon: #7a7a7a;
+    --color-form-border: #ececec;
 }
 
 body {
@@ -21,4 +34,9 @@ h3,
 h4,
 h5 {
     margin: 0;
+}
+
+button {
+    outline: none;
+    border: none;
 }
