--- a/src/routes/main/index.module.pcss
+++ b/src/routes/main/index.module.pcss
@@ -1,3 +1,15 @@
 .main {
     padding: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    &__buttons {
+        margin-top: 50px;
+        display: grid;
+        grid-gap: 32px;
+        grid-auto-flow: column;
+    }
 }
