--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -21,6 +21,7 @@
     --color-date-placeholder: #a9a9a9;
     --color-date-icon: #7a7a7a;
     --color-form-border: #ececec;
+    --color-radio-checked: #7a7a7a;
 }
 
 body {
