--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -6,7 +6,12 @@
     --color-bg-button: #f2f2f2;
     --color-white: #fff;
     --color-black: #000;
+    --color-gray: #c4c4c4;
+    --color-gray-2: #e4e4e4;
+    --color-gray-3: #9d9d9d;
+    --color-gray-4: #eee;
     --color-shadow: rgba(0, 0, 0, 0.15);
+    --color-shadow-2: rgba(0, 0, 0, 0.5);
     --color-border: #dfdfdf;
 }
 
