--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -4,6 +4,7 @@
     --color-bg-primary: #f7f7f7;
     --color-bg-secondary: #c4c4c4;
     --color-bg-button: #f2f2f2;
+    --color-file-icon: #c0c0c0;
     --color-white: #fff;
     --color-black: #000;
     --color-gray: #c4c4c4;
