--- a/src/routes/person/index.module.pcss
+++ b/src/routes/person/index.module.pcss
@@ -50,6 +50,8 @@
         font-size: 14px;
         font-weight: 500;
         white-space: nowrap;
+        color: inherit;
+        text-decoration: none;
 
         &::after {
             content: attr(data-count);
