--- a/src/routes/person/education/index.module.pcss
+++ b/src/routes/person/education/index.module.pcss
@@ -1,4 +1,4 @@
-.certificates {
+.education {
     background-color: var(--color-white);
     box-shadow: 0 1px 1px var(--color-shadow);
     border-radius: 4px;
@@ -71,13 +71,13 @@
         }
     }
 
-    &__certificate {
+    &__education {
         display: grid;
         grid-row-gap: 16px;
         padding: 32px 0;
     }
 
-    &__certificate-title {
+    &__education-title {
         font-family: Montserrat, sans-serif;
         display: block;
         font-style: normal;
