--- a/src/components/form/date/index.module.pcss
+++ b/src/components/form/date/index.module.pcss
@@ -3,7 +3,7 @@
 .date {
     display: grid;
     width: 100%;
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
 
     &_row {
         grid-auto-columns: auto 1fr;
