--- a/src/components/form/radio/index.module.pcss
+++ b/src/components/form/radio/index.module.pcss
@@ -14,7 +14,7 @@
     }
 
     &__label {
-        font-family: Roboto, serif;
+        font-family: Roboto, sans-serif;
         font-style: normal;
         font-weight: 500;
         font-size: 14px;
