--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -28,6 +28,10 @@
     --color-date-icon: #7a7a7a;
     --color-form-border: #ececec;
     --color-radio-checked: #7a7a7a;
+    --color-checkbox-input: #d9d9d9;
+    --color-checkbox-hover: #8c8c8c;
+    --color-checkbox-checked: #7a7a7a;
+    --color-checkbox-checked-hover: #8c8c8c;
 }
 
 body {
