--- a/src/routes/person/index.module.pcss
+++ b/src/routes/person/index.module.pcss
@@ -49,12 +49,15 @@
 
         &::after {
             content: attr(data-count);
-            font-size: 10px;
-            font-weight: 400;
-            line-height: 14px;
-            color: var(--color-gray-2);
+            font-size: 11px;
+            font-family: Roboto, sans-serif;
+            font-style: normal;
+            font-weight: normal;
+            line-height: 15px;
+            color: var(--color-black);
+            opacity: 0.5;
             margin-top: -4px;
-            margin-left: 6px;
+            margin-left: 4px;
         }
     }
 
