--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -32,6 +32,8 @@
     --color-checkbox-hover: #8c8c8c;
     --color-checkbox-checked: #7a7a7a;
     --color-checkbox-checked-hover: #8c8c8c;
+    --color-select-icon: #8c8c8c;
+    --color-select-tag: #aaaaaa;
 }
 
 body {
