--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -24,6 +24,7 @@
     --color-button-secondary-border: rgba(122, 122, 122, 0.3);
     --color-button-secondary-hover: rgba(122, 122, 122, 0.1);
     --color-red-error: #ff6d6d;
+    --color-bg-close: #ff6f6f;
     --color-date-placeholder: #a9a9a9;
     --color-date-icon: #7a7a7a;
     --color-form-border: #ececec;
@@ -34,6 +35,7 @@
     --color-checkbox-checked-hover: #8c8c8c;
     --color-select-icon: #8c8c8c;
     --color-select-tag: #aaaaaa;
+    --color-gray-5: rgba(234, 234, 234, 0.4);
 }
 
 body {
