--- a/src/components/form/date/index.module.pcss
+++ b/src/components/form/date/index.module.pcss
@@ -61,15 +61,14 @@
         height: 40px;
         border: 1px solid var(--color-border-input);
         border-radius: 4px;
-        padding: 0 12px;
-        padding-right: 36px;
+        padding: 0 36px 0 12px;
         font-size: 14px;
         text-align: left;
         position: relative;
         outline: 0;
         width: 100%;
         box-sizing: border-box;
-        background: transparent;
+        background-color: var(--color-white);
 
         &::placeholder {
             color: var(--color-date-placeholder);
