--- a/src/routes/person/projects/index.module.pcss
+++ b/src/routes/person/projects/index.module.pcss
@@ -84,6 +84,7 @@
         font-weight: bold;
         font-size: 16px;
         line-height: 20px;
+        height: 20px;
         color: var(--color-black);
         position: relative;
     }
@@ -127,6 +128,19 @@
         font-weight: normal;
         font-size: 13px;
         text-align: center;
+        color: var(--color-black);
+    }
+
+    &__empty {
+        display: grid;
+        grid-row-gap: 16px;
+        justify-content: center;
+        justify-items: center;
+        font-family: Roboto, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
         color: var(--color-black);
     }
 }
