--- a/src/components/header/index.module.pcss
+++ b/src/components/header/index.module.pcss
@@ -1,8 +1,8 @@
 .header {
     width: 100%;
     display: grid;
-    background-color: #fff;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+    background-color: var(--color-white);
+    box-shadow: 0 2px 2px var(--color-shadow);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -19,7 +19,7 @@
         max-width: 992px;
         width: 100%;
         margin: 0 auto;
-        color: #000;
+        color: var(--color-black);
         align-items: center;
     }
 
@@ -59,7 +59,7 @@
 
         &_active {
             border-top: solid 4px transparent;
-            border-bottom: solid 4px #9d9d9d;
+            border-bottom: solid 4px var(--color-gray-3);
             line-height: 56px;
         }
     }
@@ -80,13 +80,13 @@
         font-size: 10px;
         line-height: 12px;
         height: 12px;
-        border: solid 1px #000;
+        border: solid 1px var(--color-black);
         border-radius: 6px;
         padding: 0 4px;
         text-align: center;
         font-family: monospace;
         text-transform: uppercase;
-        color: #000;
+        color: var(--color-black);
 
         @media (hover: hover) and (pointer: fine) {
 
@@ -96,8 +96,8 @@
         }
 
         &_active {
-            background-color: #000;
-            color: #fff;
+            background-color: var(--color-black);
+            color: var(--color-white);
         }
     }
 }
