--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -7,6 +7,8 @@
     --color-file-icon: #c0c0c0;
     --color-white: #fff;
     --color-black: #000;
+    --color-gray-10: #f7f7f8;
+    --color-gray-100: #959ba5;
     --color-gray: #c4c4c4;
     --color-gray-2: #e4e4e4;
     --color-gray-3: #9d9d9d;
@@ -16,13 +18,13 @@
     --color-shadow-2: rgba(0, 0, 0, 0.5);
     --color-border: #dfdfdf;
     --color-border-input: #d9d9d9;
-    --color-button-primary: #7a7a7a;
+    --color-button-primary: #3a76ea;
     --color-button-primary-text: #fff;
-    --color-button-primary-hover: rgba(122, 122, 122, 0.7);
+    --color-button-primary-hover: rgba(58, 118, 234, 0.9);
     --color-button-secondary: #fff;
-    --color-button-secondary-text: #7a7a7a;
-    --color-button-secondary-border: rgba(122, 122, 122, 0.3);
-    --color-button-secondary-hover: rgba(122, 122, 122, 0.1);
+    --color-button-secondary-text: #3a76ea;
+    --color-button-secondary-border: rgba(58, 118, 234, 0.7);
+    --color-button-secondary-hover: rgba(58, 118, 234, 0.1);
     --color-red-error: #ff6d6d;
     --color-bg-close: #ff6f6f;
     --color-date-placeholder: #a9a9a9;
@@ -36,6 +38,18 @@
     --color-select-icon: #8c8c8c;
     --color-select-tag: #aaaaaa;
     --color-gray-5: rgba(234, 234, 234, 0.4);
+    --color-text-dark: #282c33;
+    --color-text-light: #a2a8b2;
+    --color-tooltip-background: rgba(40, 44, 51, 0.9);
+    --color-light-green: #eafaf2;
+    --color-dark-green: #39d088;
+    --color-light-orange: #fff6ec;
+    --color-dark-orange: #ffae4f;
+    --color-blue-primary: #3a76ea;
+    --color-calendar-border-default: #e6e8eb;
+    --color-calendar-border-selected: #8ad29f;
+    --color-calendar-border-month: #eef0f2;
+    --color-calendar-modal-shadow: rgba(0, 0, 0, 0.25);
 }
 
 body {
