--- a/src/routes/person/career/index.module.pcss
+++ b/src/routes/person/career/index.module.pcss
@@ -79,7 +79,9 @@
 
     &__education-title {
         font-family: Montserrat, sans-serif;
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         font-style: normal;
         font-weight: bold;
         font-size: 16px;
@@ -171,5 +173,13 @@
         text-decoration-line: underline;
         text-decoration-style: dashed;
         text-underline-offset: 3px;
+    }
+
+    &__icon-apply {
+        fill: var(--color-light-green);
+
+        & > g {
+            fill: var(--color-dark-green);
+        }
     }
 }
