--- a/src/components/form/select/index.module.pcss
+++ b/src/components/form/select/index.module.pcss
@@ -13,6 +13,10 @@
             grid-template-columns: max-content;
         }
 
+        &_no-label {
+            grid-template-columns: auto;
+        }
+
         &_column {
             grid-gap: 8px;
             grid-auto-flow: row;
@@ -43,6 +47,7 @@
     }
 
     &__field {
+        width: 100%;
         transition: border-color 200ms linear, box-shadow 200ms linear;
 
         @media screen and (prefers-reduced-motion: reduce) {
