--- a/src/routes/person/common/index.module.pcss
+++ b/src/routes/person/common/index.module.pcss
@@ -8,6 +8,15 @@
     font-family: Montserrat, sans-serif;
     align-items: flex-start;
 
+    &__title {
+        font-family: Montserrat, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 40px;
+        color: var(--color-text-dark);
+    }
+
     &__block {
         background-color: var(--color-white);
         box-shadow: 0 1px 1px var(--color-shadow);
@@ -108,6 +117,7 @@
 
         & > h4 {
             font-size: 16px;
+            line-height: 26px;
         }
     }
 
@@ -118,42 +128,11 @@
         margin-top: 16px;
     }
 
-    &__info-list-item {
-        display: grid;
-        grid-auto-flow: column;
-        grid-column-gap: 16px;
-        grid-template-columns: 160px 1fr;
-        align-items: center;
-        font-family: Roboto, sans-serif;
-        font-weight: normal;
-        font-size: 14px;
-        line-height: 16px;
-
-        & > strong {
-            font-weight: normal;
-            font-size: 14px;
-        }
-    }
-
     &__icon-apply {
-        fill: var(--color-white);
-        stroke: var(--color-gray-3);
-        stroke-width: 1px;
-        stroke-dasharray: 4;
+        fill: var(--color-light-green);
 
         & > g {
-            fill: var(--color-gray-3);
-        }
-
-        &_filled {
-            fill: var(--color-gray);
-            stroke: none;
-            padding: 1px;
-            border: none;
-
-            & > g {
-                fill: var(--color-white);
-            }
+            fill: var(--color-dark-green);
         }
     }
 
@@ -193,5 +172,140 @@
         margin: 16px auto 0;
     }
 
-    /* End block common */
+    &__control {
+        fill: var(--color-gray-3);
+        display: grid;
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--color-bg-button);
+
+        @media (hover: hover) and (pointer: fine) {
+            cursor: pointer;
+        }
+    }
+
+    &__info-list-role {
+        font-family: Montserrat, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 20px;
+        color: var(--color-text-dark);
+    }
+
+    &__info-list-top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__list-item {
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-columns: 150px 1fr;
+        font-family: Roboto, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-black);
+
+        strong {
+            font-weight: normal;
+        }
+    }
+
+    &__file-item {
+        display: grid;
+        grid-auto-flow: column;
+        grid-column-gap: 12px;
+        font-family: Roboto, sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-black);
+        justify-content: flex-start;
+        align-items: center;
+        fill: var(--color-file-icon);
+
+        a {
+            color: inherit;
+            text-decoration-line: underline;
+            text-decoration-style: dashed;
+            text-underline-offset: 3px;
+        }
+    }
+
+    &__icon-warning {
+        fill: var(--color-light-orange);
+
+        & > g {
+            fill: var(--color-dark-orange);
+        }
+    }
+
+    &__tooltip {
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 20px;
+        color: var(--color-text-dark);
+        padding: 16px 12px;
+        display: grid;
+        grid-gap: 16px;
+    }
+
+    &__tooltip-text {
+        margin: 0;
+    }
+
+    &__tooltip-link {
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-blue-primary);
+        text-decoration: underline;
+        text-decoration-style: dashed;
+        text-underline-offset: 2px;
+
+        @media (hover: hover) and (pointer: fine) {
+            cursor: pointer;
+        }
+    }
+
+    &__tooltip-content-item {
+        display: grid;
+        grid-gap: 8px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: var(--color-text-dark);
+    }
+
+    &__tooltip-content-item-text {
+        margin: 0;
+    }
+
+    &__tooltip-content-item-title {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 16px;
+        text-transform: uppercase;
+        color: var(--color-text-light);
+    }
+
+    &__modal-footer {
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
+    }
+
+    &__modal-close {
+        margin-right: 12px;
+    }
 }
