--- a/src/routes/person/projects/index.module.pcss
+++ b/src/routes/person/projects/index.module.pcss
@@ -79,7 +79,9 @@
 
     &__education-title {
         font-family: Montserrat, sans-serif;
-        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         font-style: normal;
         font-weight: bold;
         font-size: 16px;
@@ -142,5 +144,13 @@
         font-size: 14px;
         line-height: 16px;
         color: var(--color-black);
+    }
+
+    &__icon-apply {
+        fill: var(--color-light-green);
+
+        & > g {
+            fill: var(--color-dark-green);
+        }
     }
 }
