--- a/src/routes/person/rate/index.module.pcss
+++ b/src/routes/person/rate/index.module.pcss
@@ -81,4 +81,12 @@
         line-height: 16px;
         color: var(--color-black);
     }
+
+    &__icon-apply {
+        fill: var(--color-light-green);
+
+        & > g {
+            fill: var(--color-dark-green);
+        }
+    }
 }
