--- a/src/routes/project-request/components/form/index.module.pcss
+++ b/src/routes/project-request/components/form/index.module.pcss
@@ -20,3 +20,31 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.hide {
+    display: none;
+}
+
+.field-group-date {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-gap: 4px;
+    align-items: flex-start;
+}
+
+.field-group-date__separator {
+    --color: #d6d9de;
+    width: 16px;
+    height: 1px;
+    background: var(--color);
+    margin-top: 43px;
+}
+
+.append {
+    display: inline-block;
+    font-family: Roboto, sans-serif;
+    font-size: 12px;
+    line-height: 1.16;
+    color: var(--color-blue-primary);
+    margin-top: 12px;
+}
