--- a/src/components/section/actions/index.module.pcss
+++ b/src/components/section/actions/index.module.pcss
@@ -1,4 +1,4 @@
-.action-edit {
+.action {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -7,4 +7,11 @@
     height: 40px;
     border-radius: 50%;
     background-color: var(--color-bg-button);
+
+    @media (hover: hover) and (pointer: fine) {
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
 }
