SC-12 specialists filter

--- a/src/routes/project-request/components/requirements/index.module.pcss
+++ b/src/routes/project-request/components/requirements/index.module.pcss
@@ -1,9 +1,12 @@
-.actions {
-    display: grid;
-    grid-gap: 16px;
-    grid-template-columns: auto auto auto;
-}
+.requirements {
 
-.gap-bottom {
-    margin-bottom: 12px;
+    &__actions {
+        display: grid;
+        grid-gap: 16px;
+        grid-template-columns: auto auto auto;
+    }
+
+    &__gap-bottom {
+        margin-bottom: 12px;
+    }
 }
