--- a/src/components/modal/footer-submit.module.pcss
+++ b/src/components/modal/footer-submit.module.pcss
@@ -6,3 +6,7 @@
     justify-content: flex-end;
     column-gap: 12px;
 }
+
+.modal-footer-submit_with-action {
+    grid-template-columns: 1fr min-content min-content;
+}
