--- a/src/routes/project-request/components/requirements/index.module.pcss
+++ b/src/routes/project-request/components/requirements/index.module.pcss
@@ -1,12 +1,33 @@
-.requirements {
 
-    &__actions {
-        display: grid;
-        grid-gap: 16px;
-        grid-template-columns: auto auto auto;
-    }
+.actions {
+    display: grid;
+    grid-gap: 16px;
+    grid-template-columns: auto auto auto;
+}
 
-    &__gap-bottom {
-        margin-bottom: 12px;
+.gap-bottom {
+    margin-bottom: 12px;
+}
+
+.position {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-gap: 16px;
+}
+
+.position-edit {
+
+    @media (hover: hover) and (pointer: fine) {
+        cursor: pointer;
     }
+}
+
+.icon-dots {
+    fill: var(--color-gray-100);
+}
+
+.add-role {
+    color: var(--color-button-secondary-text);
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
 }
