SC-15 Save skills to role

--- a/src/routes/project-request/components/requirements/index.module.pcss
+++ b/src/routes/project-request/components/requirements/index.module.pcss
@@ -31,3 +31,25 @@
     font-family: Roboto, sans-serif;
     font-size: 14px;
 }
+
+.skills-head {
+    margin-top: 4px;
+}
+
+.skills-tag {
+    display: inline-block;
+    height: 26px;
+    line-height: 26px;
+    background-color: var(--color-gray-4);
+    font-size: 12px;
+    padding: 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-radius: 35px;
+    text-align: center;
+    font-weight: 400;
+    margin-right: 4px;
+    margin-bottom: 4px;
+    box-sizing: border-box;
+}
