--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -55,6 +55,8 @@
     --color-calendar-border-month: #eef0f2;
     --color-calendar-modal-shadow: rgba(0, 0, 0, 0.25);
     --color-separator-default: #e6e8eb;
+    --color-priority-high: #fff2f2;
+    --color-priority-medium: #fff6ea;
 }
 
 body {
