SC-17 Add request action

--- a/src/routes/project-request/components/requirements/index.module.pcss
+++ b/src/routes/project-request/components/requirements/index.module.pcss
@@ -47,3 +47,21 @@
     margin-bottom: 4px;
     box-sizing: border-box;
 }
+
+.add-request {
+    font-size: 14px;
+    line-height: 1.2;
+    text-decoration: underline dotted;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-blue-primary);
+
+    @media (hover: hover) and (pointer: fine) {
+
+        &:hover {
+            cursor: pointer;
+            text-decoration: none;
+        }
+    }
+}
