--- a/src/routes/project-request/list/index.module.pcss
+++ b/src/routes/project-request/list/index.module.pcss
@@ -7,6 +7,11 @@
     max-width: 992px;
     align-items: flex-start;
 
+    &__action {
+        width: 26px;
+        height: 26px;
+    }
+
     &__search,
     &__main {
         background-color: var(--color-white);
@@ -91,13 +96,14 @@
         display: grid;
         grid-gap: 8px;
         grid-auto-columns: max-content;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         align-items: flex-start;
         font-size: 12px;
         line-height: 14px;
     }
 
     &__request-top-right-status {
+        white-space: nowrap;
         border: 1px solid var(--color-gray-40);
         box-sizing: border-box;
         border-radius: 16px;
