--- a/src/routes/project-request/index.module.pcss
+++ b/src/routes/project-request/index.module.pcss
@@ -1,7 +1,40 @@
 .nav {
-    list-style-type: none;
-    margin: 0;
     padding: 32px 0;
+
+    &__list {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    &__header {
+        padding: 0 32px;
+        margin-bottom: 24px;
+        font-family: Montserrat, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+        color: var(--color-text-dark);
+        display: grid;
+        grid-auto-flow: column;
+        align-items: baseline;
+        justify-content: flex-start;
+        grid-gap: 20px;
+    }
+
+    &__icon-back {
+        fill: var(--color-gray-100);
+        width: 16px;
+        height: 16px;
+
+        @media (hover: hover) and (pointer: fine) {
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 
     &__item {
         position: relative;
