SC-12 project request create

--- a/src/components/modal/index.module.pcss
+++ b/src/components/modal/index.module.pcss
@@ -13,8 +13,8 @@
 
     &__header-wrapper {
         display: grid;
-        grid-template-columns: 1fr;
-        align-items: baseline;
+        grid-template-columns: 1fr 40px;
+        align-items: center;
     }
 
     &__header-wrapper_with-back {
