--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -11,15 +11,17 @@
     --color-gray-20: #eef0f2;
     --color-gray-30: #e6e8eb;
     --color-gray-40: #dee1e4;
+    --color-gray-50: #d6d9de;
+    --color-gray-60: #cdd1d7;
+    --color-gray-70: #c5cac0;
+    --color-gray-80: #bdc2c9;
+    --color-gray-90: #b6bcc4;
     --color-gray-100: #959ba5;
     --color-gray-120: #818792;
-    --color-gray: #c4c4c4;
-    --color-gray-2: #e4e4e4;
-    --color-gray-3: #9d9d9d;
-    --color-gray-4: #eee;
     --color-sidebar-header: #121212;
     --color-shadow: rgba(0, 0, 0, 0.15);
     --color-shadow-2: rgba(0, 0, 0, 0.5);
+    --color-shadow-popup: 0 1px 4px rgba(0, 0, 0, 0.25);
     --color-border: #dfdfdf;
     --color-border-input: #d9d9d9;
     --color-button-primary: #3a76ea;
@@ -41,7 +43,6 @@
     --color-checkbox-checked-hover: #8c8c8c;
     --color-select-icon: #8c8c8c;
     --color-select-tag: #aaaaaa;
-    --color-gray-5: rgba(234, 234, 234, 0.4);
     --color-text-dark: #282c33;
     --color-text-light: #a2a8b2;
     --color-tooltip-background: rgba(40, 44, 51, 0.9);
