--- a/src/components/tag/index.module.pcss
+++ b/src/components/tag/index.module.pcss
@@ -10,7 +10,7 @@
     text-transform: uppercase;
 
     &_base {
-        border: 1px solid var(--color-gray);
+        border: 1px solid var(--color-gray-80);
     }
 
     &_secondary {
