--- a/src/routes/person/common/index.module.pcss
+++ b/src/routes/person/common/index.module.pcss
@@ -72,7 +72,7 @@
     &__link-info {
         display: grid;
         place-items: center;
-        background-color: var(--color-gray);
+        background-color: var(--color-gray-80);
         width: 14px;
         height: 14px;
         border-radius: 50%;
@@ -106,7 +106,7 @@
                 content: "";
                 width: 100%;
                 height: 1px;
-                background: var(--color-gray-2);
+                background: var(--color-gray-30);
                 margin: 32px 0;
             }
         }
@@ -154,7 +154,7 @@
     }
 
     &__control {
-        fill: var(--color-gray-3);
+        fill: var(--color-gray-100);
         display: grid;
         justify-content: center;
         justify-items: center;
