--- a/src/routes/project-request/index.module.pcss
+++ b/src/routes/project-request/index.module.pcss
@@ -44,6 +44,10 @@
         font-weight: 500;
         font-size: 14px;
         line-height: 1.4;
+
+        &_no-padding {
+            padding-left: 0;
+        }
     }
 
     &__item:last-child {
