SC-16 add specialist button

--- a/src/routes/person/common/index.module.pcss
+++ b/src/routes/person/common/index.module.pcss
@@ -38,6 +38,10 @@
         margin-bottom: 24px;
     }
 
+    &__links {
+        margin-bottom: 0;
+    }
+
     &__link-wrapper {
         display: flex;
         justify-content: space-between;
@@ -257,5 +261,9 @@
 
     &__modal-close {
         margin-right: 12px;
+    }
+
+    &__project {
+        display: grid;
     }
 }
