--- a/src/components/request/index.module.pcss
+++ b/src/components/request/index.module.pcss
@@ -40,9 +40,13 @@
         border-radius: 50%;
         background-color: var(--color-gray-90);
 
+        &_success {
+            background-color: var(--color-dark-green);
+        }
+
         @media (hover: hover) and (pointer: fine) {
 
-            &:hover {
+            &:not(&_success):hover {
                 cursor: pointer;
                 background-color: var(--color-blue-primary);
             }
@@ -55,11 +59,45 @@
         fill: var(--color-white);
 
         &_apply {
-            fill: none;
+            width: 20px;
+            height: 20px;
+            fill: var(--color-dark-green);
 
             & > g {
-                fill: var(--color-light-green);
+                fill: var(--color-white);
             }
         }
+    }
+
+    &__modal-header-text {
+        font-family: Montserrat, sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 32px;
+        color: var(--color-text-dark);
+    }
+
+    &__modal-header-close {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: var(--color-gray-20);
+
+        @media (hover: hover) and (pointer: fine) {
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
+
+    &__modal-header-close-icon {
+        width: 20px;
+        height: 20px;
+        fill: var(--color-gray-100);
     }
 }
