SC-18 Add organization layout, sidebar

--- a/src/routes/project-request/components/main-info/index.module.pcss
+++ b/src/routes/project-request/components/main-info/index.module.pcss
@@ -6,8 +6,8 @@
         grid-template-columns: 40px 1fr;
         align-items: center;
     }
+}
 
-    &__gap-bottom {
-        margin-bottom: 12px;
-    }
+.gap-bottom {
+    margin-bottom: 12px;
 }
