--- a/src/routes/project-request/components/documents/index.module.pcss
+++ b/src/routes/project-request/components/documents/index.module.pcss
@@ -1,9 +1,11 @@
-.pdf {
+.base {
     color: var(--color-blue-primary);
     text-decoration: underline;
     text-decoration-style: dashed;
     text-decoration-thickness: from-font;
     text-underline-offset: 2px;
+    font-size: 14px;
+    line-height: 16px;
 
     @media (hover: hover) and (pointer: fine) {
 
