--- a/src/components/section/wrapper/index.module.pcss
+++ b/src/components/section/wrapper/index.module.pcss
@@ -1,10 +1,4 @@
-.section {
-    background-color: var(--color-white);
-    box-shadow: 0 1px 1px var(--color-shadow);
-    border-radius: 4px;
-    padding: 32px 32px 24px;
-}
-
-.section_without-paddings {
-    padding: 0;
+.wrapper {
+    display: grid;
+    grid-gap: 16px;
 }
