--- a/src/routes/organization/index.module.pcss
+++ b/src/routes/organization/index.module.pcss
@@ -1,9 +1,47 @@
-.sections {
-    display: grid;
-    grid-gap: 16px;
-}
+.organization {
 
-.header {
-    display: grid;
-    grid-template-columns: 1fr min-content;
+    &__sections {
+        display: grid;
+        grid-gap: 16px;
+    }
+
+    &__cards {
+        margin-top: 21px;
+    }
+
+    &__card {
+        display: grid;
+        grid-template-columns: 1fr 1fr min-content;
+        align-items: center;
+        font-family: Roboto, sans-serif;
+        font-size: 14px;
+        line-height: 1.14;
+        padding: 19px 0;
+        border-bottom: 1px solid var(--color-gray-30);
+        margin-left: 36px;
+        position: relative;
+
+        &:last-child {
+            border-bottom: none;
+            padding-bottom: 0;
+        }
+    }
+
+    &__card-icon {
+        fill: var(--color-gray-90);
+    }
+
+    &__card-icon-wrapper {
+        position: absolute;
+        left: -36px;
+        top: 19px;
+    }
+
+    &__card-edit {
+        cursor: pointer;
+    }
+
+    &__expand-icon {
+        fill: var(--color-gray-90);
+    }
 }
