SC-20 Add cards to specialist page, update modal cards

--- a/src/components/layout/index.pcss
+++ b/src/components/layout/index.pcss
@@ -45,6 +45,7 @@
     --color-select-tag: #aaaaaa;
     --color-text-dark: #282c33;
     --color-text-light: #a2a8b2;
+    --color-text-ultra-light: #989ea8;
     --color-tooltip-background: rgba(40, 44, 51, 0.9);
     --color-light-green: #eafaf2;
     --color-dark-green: #39d088;
