--- a/src/components/tree-list/index.module.pcss
+++ b/src/components/tree-list/index.module.pcss
@@ -22,6 +22,7 @@
         border-radius: 4px;
         padding: 10px 5px;
         height: 386px;
+        width: 656px;
         overflow: auto;
     }
 
