--- a/src/components/header/index.module.pcss
+++ b/src/components/header/index.module.pcss
@@ -1,25 +1,32 @@
 .header {
     font-family: Montserrat, sans-serif;
     font-weight: bold;
-    line-height: 1.3;
     color: var(--color-text-dark);
 }
 
 .header_level-1 {
     font-size: 24px;
+    line-height: 32px;
 }
 
 .header_level-2 {
     font-size: 20px;
+    line-height: 24px;
 }
 
 .header_level-3 {
-    font-size: 16px;
-    line-height: 1.25;
+    font-size: 18px;
+    line-height: 22px;
 }
 
 .header_level-4 {
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.header_level-5 {
     font-size: 14px;
+    line-height: 18px;
 }
 
 .header_contrasted {
