--- a/src/components/calendar/index.module.pcss
+++ b/src/components/calendar/index.module.pcss
@@ -167,6 +167,12 @@
         font-size: 16px;
     }
 
+    &__day-wrapper {
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+
     &__day {
         height: 32px;
         width: 100%;
@@ -196,47 +202,9 @@
             }
         }
 
-        /* Офис полная */
-        &_type-of-employment-1 {
-            border-color: var(--color-dark-orange);
-            line-height: 26px;
-            border-width: 3px;
-        }
-
-        /* Офис частичная */
-        &_type-of-employment-2 {
-            border-left-color: var(--color-dark-orange);
-            border-bottom-color: var(--color-dark-orange);
-            line-height: 26px;
-            border-width: 3px;
-        }
-
-        /* Удалёнка полная */
-        &_type-of-employment-3 {
+        /* Занят */
+        &_0 {
             border-color: var(--color-calendar-border-selected);
-            line-height: 26px;
-            border-width: 3px;
-        }
-
-        /* Удалёнка частичная */
-        &_type-of-employment-4 {
-            border-top-color: var(--color-calendar-border-selected);
-            border-right-color: var(--color-calendar-border-selected);
-            line-height: 26px;
-            border-width: 3px;
-        }
-
-        /* Офис / Удалёнка полная */
-        &_type-of-employment-5 {
-            border-color: var(--color-calendar-border-selected) var(--color-calendar-border-selected) var(--color-dark-orange) var(--color-dark-orange);
-            line-height: 26px;
-            border-width: 3px;
-        }
-
-        /* Офис / Удалёнка частичная */
-        &_type-of-employment-6 {
-            border-top-color: var(--color-calendar-border-selected);
-            border-bottom-color: var(--color-dark-orange);
             line-height: 26px;
             border-width: 3px;
         }
