SC-23 Add position to project cards modal

--- a/src/components/project-cards/index.module.pcss
+++ b/src/components/project-cards/index.module.pcss
@@ -53,7 +53,6 @@
     }
 
     &__cards-add-subdirectory {
-        margin-top: 16px;
         display: inline-block;
         font-family: Roboto, sans-serif;
         font-size: 14px;
@@ -71,6 +70,12 @@
 
     &__cards-add-input {
         display: block;
-        margin-top: 16px;
+    }
+
+    &__cards-column {
+        display: grid;
+        align-items: center;
+        margin-top: 32px;
+        grid-gap: 32px;
     }
 }
