SC-23 create organization project

--- a/src/components/request-list/index.module.pcss
+++ b/src/components/request-list/index.module.pcss
@@ -107,10 +107,7 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
-    &__item-top-right-action {
-        display: grid;
-        grid-gap: 16px;
-        grid-template-columns: 40px 1fr;
-        align-items: center;
+    &__icon-dots {
+        height: 24px;
     }
 }
