--- a/src/components/section/index.module.pcss
+++ b/src/components/section/index.module.pcss
@@ -3,8 +3,8 @@
     box-shadow: 0 1px 1px var(--color-shadow);
     border-radius: 4px;
     padding: 32px 32px 24px;
-}
 
-.section_without-paddings {
-    padding: 0;
+    &_without-paddings {
+        padding: 0;
+    }
 }
