--- a/src/routes/organization/components/projects/index.module.pcss
+++ b/src/routes/organization/components/projects/index.module.pcss
@@ -1,9 +1,7 @@
-.sections {
-    display: grid;
-    grid-gap: 16px;
-}
+.projects {
 
-.project-header {
-    display: grid;
-    grid-template-columns: 1fr min-content;
+    &__header {
+        display: grid;
+        grid-template-columns: 1fr min-content;
+    }
 }
