--- a/src/components/section/actions/index.module.pcss
+++ b/src/components/section/actions/index.module.pcss
@@ -1,17 +1,34 @@
 .action {
-    display: inline-flex;
-    justify-content: center;
+    display: grid;
     align-items: center;
-    fill: var(--color-gray-100);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: var(--color-bg-button);
+    justify-items: flex-start;
+    grid-gap: 8px;
+
+    &_label {
+        grid-template-columns: 40px 1fr;
+        color: var(--color-text-dark);
+        text-decoration: none;
+    }
 
     @media (hover: hover) and (pointer: fine) {
 
         &:hover {
             cursor: pointer;
+        }
+    }
+
+    &__content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        fill: var(--color-gray-100);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: var(--color-bg-button);
+
+        &_no-bg {
+            background-color: transparent;
         }
     }
 }
