--- a/src/routes/project-request/components/main-info/index.module.pcss
+++ b/src/routes/project-request/components/main-info/index.module.pcss
@@ -1,13 +1,6 @@
 .main-info {
 
-    &__header {
-        display: grid;
-        grid-gap: 16px;
-        grid-template-columns: 40px 1fr;
-        align-items: center;
+    &__gap-bottom {
+        margin-bottom: 12px;
     }
-}
-
-.gap-bottom {
-    margin-bottom: 12px;
 }
